Implement basic plugin to WM communication

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,20 +1,20 @@
 [tasks.install]
-description = "Installs jwm in /usr/local/bin."
+description = "Installs waswm in /usr/local/bin."
 script = [
   "cargo build --release",
   "echo Installing in /usr/local/bin",
   "sudo mkdir -p /usr/local/bin",
-  "sudo cp -f target/release/jwm /usr/local/bin",
-  "sudo chmod 755 /usr/local/bin/jwm"
+  "sudo cp -f target/release/waswm /usr/local/bin",
+  "sudo chmod 755 /usr/local/bin/waswm",
 
   "sudo mkdir -p /usr/local/share/xsessions",
-  "sudo cp configuration/xsessions/jwm.desktop /usr/local/share/xsessions",
+  "sudo cp configuration/xsessions/waswm.desktop /usr/local/share/xsessions",
 ]
 
 [tasks.xephyr]
 description = "Tests the debug build inside xnest"
 script = [
   "cargo build",
-  "Xephyr -name 'jwm' -br -ac -noreset -screen 1024x768 +xinerama :2 &",
-  "sleep 1 && RUST_LOG=debug DISPLAY=:2 exec target/debug/jwm"
+  "Xephyr -name 'waswm' -br -ac -noreset -screen 1024x768 +xinerama :2 &",
+  "sleep 1 && RUST_LOG=debug DISPLAY=:2 exec target/debug/waswm"
 ]
