--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-log = "0.4"
 env_logger = "0.9"
+log = "0.4"
+parking_lot = "0.11.2"
+shlex = "1.0"
 wasmer = "2.0"
 x11rb = "0.9"
-shlex = "1.0"
