--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,20 +1,20 @@
 [tasks.install]
-description = "Installs waswm in /usr/local/bin."
+description = "Installs coppe-wm in /usr/local/bin."
 script = [
   "cargo build --release",
   "echo Installing in /usr/local/bin",
   "sudo mkdir -p /usr/local/bin",
-  "sudo cp -f target/release/waswm /usr/local/bin",
-  "sudo chmod 755 /usr/local/bin/waswm",
+  "sudo cp -f target/release/coppe-wm /usr/local/bin",
+  "sudo chmod 755 /usr/local/bin/coppe-wm",
 
   "sudo mkdir -p /usr/local/share/xsessions",
-  "sudo cp configuration/xsessions/waswm.desktop /usr/local/share/xsessions",
+  "sudo cp configuration/xsessions/coppe-wm.desktop /usr/local/share/xsessions",
 ]
 
 [tasks.xephyr]
 description = "Tests the debug build inside xnest"
 script = [
   "cargo build",
-  "Xephyr -name 'waswm' -br -ac -noreset -screen 1024x768 +xinerama :2 &",
-  "sleep 1 && RUST_LOG=${RUST_LOG:-waswm} DISPLAY=:2 exec target/debug/waswm"
+  "Xephyr -name 'coppe-wm' -br -ac -noreset -screen 1024x768 +xinerama :2 &",
+  "sleep 1 && RUST_LOG=${RUST_LOG:-coppe-wm} DISPLAY=:2 exec target/debug/coppe-wm"
 ]
