--- a/coppe-wm/Cargo.toml
+++ b/coppe-wm/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+clap = "2.33"
 env_logger = "0.9"
 log = "0.4"
 parking_lot = "0.11.2"
