--- a/coppe-wm/Cargo.toml
+++ b/coppe-wm/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 env_logger = "0.9"
+coppe-common = { path = "../coppe-common", features = [ "std" ] }
 log = "0.4"
 parking_lot = "0.11.2"
 shlex = "1.0"
