--- a/libcoppe/rust/coppe-core/Cargo.toml
+++ b/libcoppe/rust/coppe-core/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "coppe-std"
+name = "coppe-core"
 version = "0.0.1"
 authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+coppe-common = { path = "../../../coppe-common" }
